--- a/Contact/src/main/java/templates/form.html
+++ b/Contact/src/main/java/templates/form.html
@@ -1,20 +1,21 @@
 <html>
     <body>
-        <form action="#" th:action="@{/}" th:object="${contactForm}" method="post">
+        <form action="#" th:action="@{/add}" th:object="${contact}" method="post">
             <table>
+            	<input type="hidden" th:field="*{id}" />
                 <tr>
                     <td>Prenom:</td>
-                    <td><input type="text" th:field="*{prenom}" /></td>
+                    <td><input type="text" th:field="*{prenom}"  /></td>
                     <td th:if="${#fields.hasErrors('prenom')}" th:errors="*{prenom}">Erreur Prenom</td>
                 </tr>
                 <tr>
                     <td>Nom:</td>
-                    <td><input type="text" th:field="*{nom}" /></td>
+                    <td><input type="text" th:field="*{nom}"  /></td>
                     <td th:if="${#fields.hasErrors('nom')}" th:errors="*{nom}">Erreur Nom</td>
                 </tr>
                 <tr>
                     <td>Mail:</td>
-                    <td><input type="text" th:field="*{mail}" /></td>
+                    <td><input type="email" th:field="*{mail}"  /></td>
                     <td th:if="${#fields.hasErrors('mail')}" th:errors="*{mail}">Erreur Mail</td>
                 </tr>
                 <tr>
@@ -27,5 +28,6 @@
                 </tr>
             </table>
         </form>
+        <p><a href="/">Retourner</a> a l'accueil</p>
     </body>
 </html>
